--- a/Style.css
+++ b/Style.css
@@ -12,7 +12,7 @@ header p {
  font-size: large;
  padding-right: 90px;
  padding-left:5px;
- margin-bottom: 50px;
+ padding-bottom: 15px;
  
  
  
@@ -26,9 +26,6 @@ nav span {
     color:white;
     text-align: center;
     border: 1px solid white;
-    font-family:sans-serif ;
-    font-weight:bold;
-    color:white;
 }
 .main{margin: 0%;
 padding:0%;
@@ -57,31 +54,6 @@ body, html{
     height:100%;
     margin:0;
 }
-.teaimages img {
- display:inline-block;
- height: 200px;
- width: 200px;
- 
+.photo{
+    background-image: url("DSC_0079.jpeg");
 }
-.teaimages {text-align: center;}
-
-.lable {
-padding:0 10px;
-display: inline;
-font-family: cursive;
-color:green;
-font-size: 25px;}
-
-
-.lables{text-align: center;}
-
-iframe{display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;}
-
-    footer{height: 100px;
-        width:100%;
-    
-        background-color: rgb(14, 180, 14);
-        }
